Fixed iOS bug where body overflow was not registering

--- a/src/sass/partials/_helpers.scss
+++ b/src/sass/partials/_helpers.scss
@@ -1,5 +1,7 @@
 // Prevent users from scrolling
 .overflow-none {
+    // position fixed to allow overflow hidden on iOS devices
+    position: fixed;
     overflow: hidden !important;
 }
 
