--- a/task-website/src/partials/_main.scss
+++ b/task-website/src/partials/_main.scss
@@ -10,4 +10,8 @@ $main-position-sidebar-open: $sidebar-width-sm;
     background-color:   $body-bg-secondary;
     transition:         transform 0.2s linear;
     position: relative;
+
+    .app--sidebar-open {
+        width: 400px;
+    }
 }
